# indooruav_msgs

./: CMakeLists.txt  package.xml
srv/: CameraVideoConfig.srv  CameraZoom.srv  GimbalAngle.srv  GimbalYawFollow.srv  TransferMissionMedia.srv  UavCameraSetVideoResolution.srv  UavCameraZoomFactor.srv  UavGimbalPitchAngle.srv  UploadImageBytes.srv
